@@ -66,14 +66,10 @@ class Xml extends AbstractScalarAnalysis
     protected $model;
 
     /**
-     * The original, un-pretty-print XML string.
-     *
-     * @var string
-     */
-    protected $originalXml = '';
-
-    /**
      * Is there currently a node open?
+     *
+     * @deprecated since 5.0.0
+     *   Will be removed.
      *
      * @var bool
      */
@@ -123,7 +119,7 @@ class Xml extends AbstractScalarAnalysis
         }
 
         $this->model = $model;
-        $this->originalXml = $string;
+        $this->handledValue = $string;
         $this->hasErrors = false;
 
         return true;
@@ -148,7 +144,7 @@ class Xml extends AbstractScalarAnalysis
                 $this->hasErrors = true;
             }
         );
-        $dom->loadXML($this->originalXml);
+        $dom->loadXML($this->handledValue);
         restore_error_handler();
 
         if ($this->hasErrors) {
@@ -162,10 +158,7 @@ class Xml extends AbstractScalarAnalysis
             $meta[$messages->getHelp('metaContent')] = $this->model->getData();
         }
 
-
-        $this->originalXml = '';
         $this->hasErrors = false;
-        unset($this->model);
 
         return $meta;
     }
